Consolidated resources to one directory.  Deleted unused config variables.

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -1,61 +1,39 @@
 [programs]
-bedtools=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
 bgzip=/nfs/goldstein/software/bin/bgzip
 gatk=/nfs/goldstein/software/GATK/GATK-3.6.0-ArchivedVersion-g89b7209-patched/GenomeAnalysisTK.jar
-# /nfs/goldstein/software/GATK-3.6.0-nightly-2016-08-27-g667f78b/GenomeAnalysisTK.jar
-gatk4=/nfs/goldstein/goldsteinlab/software/GATK-4.0-ashg/GATK4_CNV/gatk4.jar
 java=/nfs/goldstein/software/jdk1.8.0_05/bin/java
 picard=/nfs/goldstein/software/picard-tools-2.2.1/picard.jar
 pypy=/nfs/goldstein/software/pypy-2.2.1-linux_x86_64-portable/bin/pypy
-snpEff=/nfs/goldstein/software/snpEff/4.1/snpEff.jar
-snpSift=/nfs/goldstein/software/snpEff/4.1/SnpSift.jar
 tabix=/nfs/goldstein/software/bin/tabix
 verifybamid=/nfs/goldstein/software/bin/verifyBamID.20120620
-vcffilter=/nfs/goldstein/software/vcflib/bin/vcffilter
 clineff=/nfs/goldstein/software/clinEff/ClinEff.jar
-python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
 
 [locations]
 base=/nfs/igmdata01/ALIGNMENT/BUILD37/DRAGEN
-scratch=/nfs/seqscratch_ssd1/ALIGNMENT/BUILD37/DRAGEN
 
 [pipeline_files]
-ccds_bed_file=/nfs/goldstein/git/dragen_pipe/dragen/python/data/ccds_r14.bed
-coverage_binner=/nfs/goldstein/git/dragen_pipe/dragen/python/dragen_coverage_binner.py
-gq_binner=/nfs/goldstein/git/dragen_pipe/dragen/python/gq_binner_updated.py
-snpEff_cfg=/nfs/goldstein/software/snpEff/4.1/snpEff.config
+gq_binner=/nfs/goldstein/software/dragen_pipe/resources/gq_binner_updated.py
 clineff_cfg=/nfs/goldstein/software/clinEff/clinEff.config
-target_file=/nfs/goldstein/git/dragen_pipe/dragen/python/data/ccds_regions.list
-target_file_X=/nfs/goldstein/git/dragen_pipe/dragen/python/data/X.intervals
-target_file_Y=/nfs/goldstein/git/dragen_pipe/dragen/python/data/Y.intervals
-transpose_awk=/nfs/goldstein/git/dragen_pipe/dragen/python/transpose.awk
-subset_vcf_awk=/nfs/goldstein/git/dragen_pipe/dragen/python/subset_vcf.awk
-deannotater=/nfs/goldstein/git/dragen_pipe/dragen/python/strip_snpeff.py
-add_info_annotation=/nfs/goldstein/git/dragen_pipe/dragen/python/add_info_annotation.sh
+target_file=/nfs/goldstein/software/dragen_pipe/resources/ccds_regions.list
+target_file_X=/nfs/goldstein/software/dragen_pipe/resources/X.intervals
+target_file_Y=/nfs/goldstein/software/dragen_pipe/resources/Y.intervals
+transpose_awk=/nfs/goldstein/software/dragen_pipe/resources/transpose.awk
 
 [gatk_resources]
-contam1000g_vcf=/nfs/goldstein/git/dragen_pipe/dragen/python/data/All.1kwgs.genomes.seqcap.exome.vcf.gz
+contam1000g_vcf=/nfs/goldstein/software/dragen_pipe/resources/All.1kwgs.genomes.seqcap.exome.vcf.gz
 ref_genome=/scratch/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
-interval=/nfs/goldstein/software/dragen_pipe/dragen/conf/hs37d5.intervals
+interval=/nfs/goldstein/software/dragen_pipe/resources/hs37d5.intervals
 g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.snps.high_confidence.b37.vcf.gz
 hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf.gz
 Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf.gz
 omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf.gz
 dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf.gz
-annotatedbSNP=/nfs/goldstein/git/dragen_pipe/dragen/python/data/dbsnp_fixed.vcf.gz
-exac=/nfs/fastq15/EXTERNAL_DATASETS/ExAC/v0.3.1/ExAC.r0.3.1.header.updated.sites.vep.vcf.gz
+annotatedbSNP=/nfs/goldstein/software/dragen_pipe/resources/dbsnp_fixed.vcf.gz
+exac=/nfs/goldstein/software/dragen_pipe/resources/ExAC.r0.3.1.header.updated.sites.vep.vcf.gz
 
 [variables]
-create_targetfile=False
 max_mem=24
-cnv_target_padding=250
-block_size=10000
-
-[db]
-cnf=/nfs/goldstein/software/dragen/db.cnf
-seqdb_group=seqdb
-dragen_group=dragen
 
 [qc_metrics]
 ## Database field names for the qc metrics
@@ -94,10 +72,6 @@ concordance=ConcordanceWithProduction
 [core]
 max_reschedules=0
 #default-scheduler-url=http://igm-atav01.igm.cumc.columbia.edu:8082
-#error-email=rp2801@cumc.columbia.edu
-
-[email]
-#force-send=True
 
 [retcode]
 already_running=10
