Updated data locations to new versions (seqscratch_ssd/dedicated resources/ directory).

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -14,23 +14,23 @@ base=/nfs/igmdata01/ALIGNMENT/BUILD37/DRAGEN
 [pipeline_files]
 gq_binner=/nfs/goldstein/software/dragen_pipe/resources/gq_binner_updated.py
 clineff_cfg=/nfs/goldstein/software/clinEff/clinEff.config
-target_file=/nfs/goldstein/software/dragen_pipe/resources/ccds_regions.list
-target_file_X=/nfs/goldstein/software/dragen_pipe/resources/X.intervals
-target_file_Y=/nfs/goldstein/software/dragen_pipe/resources/Y.intervals
+target_file=/nfs/seqscratch_ssd/PIPELINE_DATA/ccds_regions.list
+target_file_X=/nfs/seqscratch_ssd/PIPELINE_DATA/X.intervals
+target_file_Y=/nfs/seqscratch_ssd/PIPELINE_DATA/Y.intervals
 transpose_awk=/nfs/goldstein/software/dragen_pipe/resources/transpose.awk
 
 [gatk_resources]
-contam1000g_vcf=/nfs/goldstein/software/dragen_pipe/resources/All.1kwgs.genomes.seqcap.exome.vcf.gz
+contam1000g_vcf=/nfs/seqscratch_ssd/PIPELINE_DATA/All.1kwgs.genomes.seqcap.exome.vcf.gz
 ref_genome=/scratch/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
-seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
-interval=/nfs/goldstein/software/dragen_pipe/resources/hs37d5.intervals
-g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.snps.high_confidence.b37.vcf.gz
-hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf.gz
-Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf.gz
-omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf.gz
-dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf.gz
-annotatedbSNP=/nfs/goldstein/software/dragen_pipe/resources/dbsnp_fixed.vcf.gz
-exac=/nfs/goldstein/software/dragen_pipe/resources/ExAC.r0.3.1.header.updated.sites.vep.vcf.gz
+seqdict_file=/nfs/seqscratch_ssd/PIPELINE_DATA/hs37d5.dict
+interval=/nfs/seqscratch_ssd/PIPELINE_DATA/hs37d5.intervals
+g1000=/nfs/seqscratch_ssd/PIPELINE_DATA/1000G_phase1.snps.high_confidence.b37.vcf.gz
+hapmap=/nfs/seqscratch_ssd/PIPELINE_DATA/hapmap_3.3.b37.vcf.gz
+Mills1000g=/nfs/seqscratch_ssd/PIPELINE_DATA/Mills_and_1000G_gold_standard.indels.b37.vcf.gz
+omni=/nfs/seqscratch_ssd/PIPELINE_DATA/1000G_omni2.5.b37.vcf.gz
+dbSNP=/nfs/seqscratch_ssd/PIPELINE_DATA/dbsnp_138.b37.vcf.gz
+annotatedbSNP=/nfs/seqscratch_ssd/PIPELINE_DATA/dbsnp_fixed.vcf.gz
+exac=/nfs/seqscratch_ssd/PIPELINE_DATA/ExAC.r0.3.1.header.updated.sites.vep.vcf.gz
 
 [variables]
 max_mem=24
