added git and qsub

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -4,9 +4,11 @@ bgzip=/nfs/goldstein/software/bin/bgzip
 gatk=/nfs/goldstein/software/GATK/GATK-3.6.0-ArchivedVersion-g89b7209-patched/GenomeAnalysisTK.jar
 # /nfs/goldstein/software/GATK-3.6.0-nightly-2016-08-27-g667f78b/GenomeAnalysisTK.jar
 gatk4=/nfs/goldstein/goldsteinlab/software/GATK-4.0-ashg/GATK4_CNV/gatk4.jar
+git=/nfs/goldstein/software/git-2.5.0/bin/git
 java=/nfs/goldstein/software/jdk1.8.0_05/bin/java
 picard=/nfs/goldstein/software/picard-tools-2.2.1/picard.jar
 pypy=/nfs/goldstein/software/pypy-2.2.1-linux_x86_64-portable/bin/pypy
+qsub=/opt/sge6_2u5/bin/lx24-amd64/qsub
 snpEff=/nfs/goldstein/software/snpEff/4.1/snpEff.jar
 snpSift=/nfs/goldstein/software/snpEff/4.1/SnpSift.jar
 tabix=/nfs/goldstein/software/bin/tabix
