Added samtools to luigi cfg.

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -7,6 +7,7 @@ pypy=/nfs/goldstein/software/pypy-2.2.1-linux_x86_64-portable/bin/pypy
 tabix=/nfs/goldstein/software/bin/tabix
 verifybamid=/nfs/goldstein/software/bin/verifyBamID.20120620
 clineff=/nfs/goldstein/software/clinEff/ClinEff.jar
+samtools=/nfs/goldstein/software/samtools-1.4.1/samtools
 
 [locations]
 base=/nfs/igmdata01/ALIGNMENT/BUILD37/DRAGEN
