consolidating pipeline tracking

--- a/import/src/waldb.cfg
+++ b/import/src/waldb.cfg
@@ -2,13 +2,14 @@
 genome=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 
 [db]
-cnf=/nfs/goldstein/software/dragen/db.cnf
+cnf=/nfs/goldstein/software/dragen_pipe/master/import/src/db.cnf
 waldb_group=waldb
 seqdb_group=seqdb
 dragen_group=dragen
 
 [pipeline]
-scratch_area=/nfs/seqscratch{seqscratch}/ANNOTATION/LOAD/WALDB/{sequencing_type}/{sample_name}.{prep_id}/
+scratch_area=/nfs/seqscratch_ssd/dh2880/ANNOTATION/DB_LOADING/{sequencing_type}/{sample_name}.{prep_id}/
+; scratch_area=/nfs/seqscratch11/dh2880/ANNOTATION/DB_LOADING/{sequencing_type}/{sample_name}.{prep_id}/
 variant_id_header=##INFO<ID=VariantID,Number=A,Type=Integer,Description="The variant_id for each alternate allele">
 min_dp_to_include=3
 block_size=1000
