--- a/import/src/luigi.cfg
+++ b/import/src/luigi.cfg
@@ -8,7 +8,7 @@ task_name_format={task_family}.{sample_name}.{sample_id}.chr{chromosome}
 task_name_format={task_family}.{sample_name}.{sample_id}.chr{chromosome}
 
 [core]
-error-email=bc2675@cumc.columbia.edu
+error-email=dh2880@cumc.columbia.edu
 
 [email]
 force-send=True
