validation as useless as is currently is now full pipeline step and it and dups run locally

--- a/dragen/python/logging.conf
+++ b/dragen/python/logging.conf
@@ -23,12 +23,22 @@ formatter=consoleFormatter
 args=(sys.stderr,)
 
 [handler_timedRotatingFileHandler]
-#class=handlers.TimedRotatingFileHandler
-class=handlers.SocketHandler
+#### three of the handlers (StreamHandler, FileHandler and NullHandler) are actually defined 
+#### in the logging module : https://docs.python.org/3/library/logging.handlers.html
+# TimedRotatingFileHandler : supports rotation of disk log files at certain timed intervals.
+# RotatingFileHandler : supports rotation of disk log files.
+# SocketHandler : sends logging output to a network socket. 
+class=handlers.TimedRotatingFileHandler
+#### presumably, if running wrapper from single host this 'might' be handy to listen on port?!?
+# class=handlers.SocketHandler
+#
 level=INFO
 formatter=timedRotatingFileFormatter
-#args=("/nfs/seqscratch09/dragen_gatk/dragen_gatk.txt", "midnight", 1, 10)
-args=("localhost", handlers.DEFAULT_TCP_LOGGING_PORT)
+#### bits...
+# TimedRotatingFileHandler(filename, when='h', interval=1, backupCount=0, encoding=None, delay=False, utc=False, atTime=None)
+args=("/nfs/seqscratch09/dsth/play/.logs/PIA.txt","midnight",1,28)
+# args=("localhost", handlers.DEFAULT_TCP_LOGGING_PORT)
+# 
 
 [formatter_timedRotatingFileFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
