--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -10,7 +10,9 @@ clineff=/nfs/goldstein/software/clinEff/ClinEff.jar
 samtools=/nfs/goldstein/software/samtools-1.4.1/samtools
 
 [locations]
-base=/nfs/igmdata01/ALIGNMENT/BUILD37/DRAGEN
+# nicely enough this is actualy the archival lcoation?!?
+# base=/nfs/igmdata01/ALIGNMENT/BUILD37/DRAGEN
+base=/nfs/archive/p2018/ALIGNMENT/BUILD37/DRAGEN
 
 [pipeline_files]
 gq_binner=/nfs/goldstein/software/dragen_pipe/resources/gq_binner_updated.py
