--- a/import/src/waldb.cfg
+++ b/import/src/waldb.cfg
@@ -8,8 +8,11 @@ seqdb_group=seqdb
 dragen_group=dragen
 
 [pipeline]
-scratch_area=/nfs/seqscratch_ssd/dh2880/ANNOTATION/DB_LOADING/{sequencing_type}/{sample_name}.{prep_id}/
+; scratch_area=/nfs/fastq_temp/dh2880/ANNOTATION/DB_LOADING/{sequencing_type}/{sample_name}.{prep_id}/
+scratch_area=/nfs/fastq_temp2/dh2880/ANNOTATION/DB_LOADING/{sequencing_type}/{sample_name}.{prep_id}/
+; scratch_area=/nfs/seqscratch_ssd/dh2880/ANNOTATION/DB_LOADING/{sequencing_type}/{sample_name}.{prep_id}/
 ; scratch_area=/nfs/seqscratch11/dh2880/ANNOTATION/DB_LOADING/{sequencing_type}/{sample_name}.{prep_id}/
+
 variant_id_header=##INFO<ID=VariantID,Number=A,Type=Integer,Description="The variant_id for each alternate allele">
 min_dp_to_include=3
 block_size=1000
