turn off gvcf requirement for udn

--- a/dragen/python/logging.conf
+++ b/dragen/python/logging.conf
@@ -36,8 +36,9 @@ level=INFO
 formatter=timedRotatingFileFormatter
 #### bits...
 # TimedRotatingFileHandler(filename, when='h', interval=1, backupCount=0, encoding=None, delay=False, utc=False, atTime=None)
-args=("/nfs/seqscratch09/dsth/play/.logs/PIA.txt","midnight",1,28)
-# args=("/nfs/seqscratch09/informatics/logs/PIA.txt","midnight",1,28)
+# args=("/nfs/seqscratch09/dsth/play/.logs/PIA.txt","midnight",1,28)
+args=("/nfs/seqscratch09/informatics/logs/PIA.txt","midnight",1,28)
+    jlogs","midnight",1,28)
 # args=("localhost", handlers.DEFAULT_TCP_LOGGING_PORT)
 # 
 
