changed luigi cfg file and change roche to union bed file

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -35,6 +35,7 @@ omni=/nfs/seqscratch_ssd/PIPELINE_DATA/1000G_omni2.5.b37.vcf.gz
 dbSNP=/nfs/seqscratch_ssd/PIPELINE_DATA/dbsnp_138.b37.vcf.gz
 annotatedbSNP=/nfs/seqscratch_ssd/PIPELINE_DATA/dbsnp_fixed.vcf.gz
 exac=/nfs/seqscratch_ssd/PIPELINE_DATA/ExAC.r0.3.1.header.updated.sites.vep.vcf.gz
+union_bed=/nfs/goldsteindata/refDB/captured_regions/Build37/Genome_v1/Genome_v1_all.bed
 roche_bed=/nfs/seqscratch_ssd/PIPELINE_DATA/SeqCap_EZ_Exome_v3_capture.bed
 
 [qc_metrics]
