uncomment roche_bed in cfg file

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -36,7 +36,7 @@ dbSNP=/nfs/seqscratch_ssd/PIPELINE_DATA/dbsnp_138.b37.vcf.gz
 annotatedbSNP=/nfs/seqscratch_ssd/PIPELINE_DATA/dbsnp_fixed.vcf.gz
 exac=/nfs/seqscratch_ssd/PIPELINE_DATA/ExAC.r0.3.1.header.updated.sites.vep.vcf.gz
 union_bed=/nfs/goldsteindata/refDB/captured_regions/Build37/Genome_v1/Genome_v1_all.bed
-roche_bed=/nfs/seqscratch_ssd/PIPELINE_DATA/SeqCap_EZ_Exome_v3_capture.bed
+# roche_bed=/nfs/seqscratch_ssd/PIPELINE_DATA/SeqCap_EZ_Exome_v3_capture.bed
 
 [qc_metrics]
 ## Database field names for the qc metrics
